# Pytorch-Basics

./: .gitignore  .pre-commit-config.yaml  LICENSE  config.py  main.py  pyproject.toml
notebooks/: data_augmentation.ipynb  data_processing.ipynb  data_split.ipynb  model_evaluation.ipynb
src/: option.py  predict.py  test.py  train.py
src/datasets/: animal_dataset.py
src/models/: cnn.py  mlp.py  vgg16.py
